PO-865-get-user-state-fix-sonar-problems